js/src/tests/test262/language/statements/class/elements/syntax/early-errors/invalid-names/field-init-member-expression-bad-reference.js
DONOTEVALUATE
(
)
;
class
C
{
f
=
something
.
#
x
}
